# yet-another-spotify-scraping-attempt

./: .gitignore  Dockerfile  README.md  create-table.py  cronjob.py  docker-compose.yaml  extract-recently-played.py  fetch-recently-played.py  get-recently-played.py  pyproject.toml  refreshing-token.py  requirements.txt  sample.env.conf  test.py  test_file.json
app/: create-table.py  extract-recently-played.py  test.py
app/models/: common.py
app/models/domain/: album.py  artist.py  image.py  models.py
app/models/schema/: models_orm.py
backend/: README.md  main.py
backend/model/: __init__.py  image.py  song.py  track_recently_played.py  user.py
backend/utils/: authentication.py
db/: events.py
db/repositories/: README.md  album.py  artist.py  image.py  track.py  user.py
model/: base.py  image.py  models.py  song.py  track_recently_played.py
models/: models.py  models_orm.py
python/utils/: authentication.py
utils/: authentication.py  database.py
