[tool.poetry]
name = "yet-another-spotify-scraping-attempt"
version = "0.1.0"
description = ""
authors = ["slothPete7773 <Veerakit413@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.1"
requests = "^2.31.0"
sqlalchemy = "^2.0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
